# platypus

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
biometric/: Cargo.toml  SwiftBridgeCore.swift  build.original.rs  build.rs
biometric/.cargo/: config.toml
biometric/src/: lib.rs  test.rs
biometric/swift-library/: Package.swift  swift-library.h
biometric/swift-library/Resources/: Info.plist
biometric/swift-library/Sources/cxxLibrary/include/: cxxLibrary.h
biometric/swift-library/Sources/swift-library/: bridging-header.h  swift_library.swift
biometric/swift-library/Tests/swift-libraryTests/: swift_libraryTests.swift
