[workspace]
resolver = "3"
members = ["biometric"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "2"
swift-bridge = { git = "https://github.com/debanjanbasu/swift-bridge.git", branch = "master", features = [
    "async",
] }
swift-bridge-build = { git = "https://github.com/debanjanbasu/swift-bridge.git", branch = "master" }
# swift-bridge = { path = "../swift-bridge", features = ["async"] }
# swift-bridge-build = { path = "../swift-bridge/crates/swift-bridge-build" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[workspace.lints.rust]
unsafe_code = "allow"

[workspace.lints.clippy]
nursery = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
string_slice = "deny"
pedantic = "deny"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Debanjan Basu"]
description = "Am I a duck, am I a beaver? I'm a platypus!"
homepage = "https://platypus.github.io"
documentation = "https://platypus.github.io/docs"
