[package]
name = "biometric"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
swift-bridge = { workspace = true }

[build-dependencies]
tokio.workspace = true
swift-bridge-build.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
