[package]
name = "biometric"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
autocxx = { workspace = true }
cxx = { workspace = true }

[build-dependencies]
autocxx-build.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
